# FS-i6-SilverLite

./: .cproject  .gitignore  .project  404.html  MKL16Z64xxx4_2019-11-07_01_42.mex  Makefile  README.md  index.html  mkdocs.yml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
Acknowledgements/: index.html
CMSIS/: MKL16Z4_features.h  system_MKL16Z4.c
ChannelConfig/: index.html
Debug/: .gitignore  makefile
Debug/source/: subdir.mk
Flashing/: index.html
GEM/: FakeArduino.h  FakeGLCD.cpp  FakeGLCD.h  GEM.cpp  GEM.h  GEMItem.cpp  GEMItem.h  GEMPage.cpp  GEMPage.h  GEMSelect.cpp  GEMSelect.h
Manual/: index.html
Multiprotocol/: index.html
NRF24L01/: index.html
SDK/devices/MKL16Z4/: MKL16Z4.h  MKL16Z4.xml  RTE_Device.h  fsl_device_registers.h  system_MKL16Z4.h
SDK/devices/MKL16Z4/drivers/: fsl_clock.c
SDK/devices/MKL16Z4/gcc/: MKL16Z64xxx4_ram.ld  startup_MKL16Z4.S
TODO/: index.html
armgcc/: CMakeLists.txt  armgcc_force_cpp.cmake  build_all.bat  build_debug.bat  build_log.txt  build_release.bat  clean.bat
bayang/: bayang.cpp  bayang.h  bayang_chan.cpp  bayang_chan.h  bayang_common.h  bayang_rx.cpp  bayang_tx.cpp  bayang_tx_main.cpp  drv_XN297_emu.cpp  drv_XN297_emu.h  drv_nRF24L01.cpp  drv_nRF24L01.h  drv_softspi.cpp  drv_softspi.h  iface_nrf24l01.h
board/: board.c  clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
devEnvSetup/: index.html
docs/: Acknowledgements.md  ChannelConfig.md  Flashing.md  Manual.md  Multiprotocol.md  NRF24L01.md  TODO.md  devEnvSetup.md  index.md
drivers/: fsl_clock.h
fonts/: arial.h
gcc/: MKL16Z64xxx4_flash.ld
search/: search_index.json
source/: adc.c  adc.cpp  adc.h  backlight.c  backlight.h  buttons.c  buttons.h  config.h  console.c  console.h  debug.c  debug.h  delay.h  drv_time.c  drv_time.h  flash.cpp  flash.h  gui.cpp  gui.h  gui_calibrate.cpp  gui_config_chans_bayang.cpp  gui_main.cpp  gui_models.cpp  gui_select_model.cpp  gui_sliders.cpp  gui_tx.cpp  lcd.c  lcd.h  main.c  main.cpp  multiprotocol.cpp  multiprotocol.h  multiprotocol_enums.h  screen.c  screen.h  silverlite_data.cpp  silverlite_data.h  sound.cpp  sound.h  storage.cpp  (+9 more)
startup/: startup_mkl16z4.cpp
todo/: index.html
